# bt3

./: Cargo.toml
examples/basic/: main.rs
examples/planner/: main.rs
src/: imagefile.rs  main.rs
src/bt3/: mod.rs  terrain.rs
src/bt3/render/: base.rs  gfx.rs  mod.rs
src/core/: Cargo.toml
src/core/src/: imagefile.rs  lib.rs  planner.rs  region.rs  render.rs  terrain.rs
src/core/src/render/: gfx.rs
src/core/src/render/shaders/: terrain_150.glslv
src/renderers/gfx_gl/: Cargo.toml
src/renderers/gfx_gl/src/: lib.rs
src/renderers/gl/: Cargo.toml
src/renderers/gl/src/: lib.rs
src/renderers/gl/src/shaders/: terrain_150.glslv
src/shader/: simple_120.glslf  simple_150.glslf
