[package]
name = "bt3_meta"
version = "0.1.0"
authors = ["Karl Hobley <karlhobley10@gmail.com>"]

[dependencies]
cgmath = "0.2.0"
gfx = "0.6.5"
glutin = "0.2"
gfx_window_glutin = "0.3.0"

[dependencies.bt3]
path = "src/core"
version = "0.1.0"

[dependencies.bt3_render_gl]
path = "src/renderers/gl"
version = "0.1.0"

[[example]]
name = "basic"
path = "examples/basic/main.rs"
